--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "framer-motion": "^11.11.9",
     "next": "14.2.16",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18"
   },
