--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@prisma/client": "^5.21.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.16",
     "prisma": "^5.21.1",
